hphp/test/zend/bad/ext/reflection/tests/ReflectionParameter_export_error.php
<?php
function ReflectionParameterTest($test, $test2 = null) {
	echo $test;
}
$reflect = new ReflectionFunction('ReflectionParameterTest');
foreach($reflect->getParameters() as $key => $value) {
	ReflectionParameter::export();
}
?>
==DONE==
